:bug: messages for the user are no longer hidden by the divisions

--- a/assets/forms.css
+++ b/assets/forms.css
@@ -25,7 +25,7 @@
     background: white;
 	border-style: solid;
 	border-color: #3f51b5;
-	border-width: 5px;
+	border-width:4px;
     margin-left: 530px;
 }
 
